<resources>
    <string name="app_name">森の強制スケジューラー</string>
    <string name="channel_name">ssa channel</string>
    <string name="channel_description">ssa channel description</string>

    <!-- ホーム画面 -->
    <string name="option_text">オプション</string>
    <string name="plan_nothing">予定はありません</string>
    <string name="do_input_plan">予定を入力してください</string>
    <string name="btn_shop">ショップ</string>
    <string name="btn_timer_mode">タイマーモード</string>
    
    <!-- オプションダイアログ -->
    <string name="option_sound">Sound</string>
    <string name="option_bgm">BGM</string>
    <string name="option_se">SE</string>
    <string name="option_apply">適用</string>

    <!-- 予定表示Fragment -->
    <string name="nothing_schedule">"予定は何もありません"</string>

    <!-- 登録ダイアログ -->
    <string name="before_notification">開始10分前に通知いたしますか？</string>
    <string name="do_register">登録</string>
    <string name="error_time">登録時間が正しくありません!修正してください。</string>
    <string name="error_booking_schedule">この開始時間は既に登録されている予定の開始時刻と重複しています。\n重複しない時間に修正してください。</string>

    <!-- 予定一覧ダイアログ -->
    <string name="do_remove">REMOVE</string>

    <!-- タイマーモードダイアログ -->
    <string name="do_start">開始</string>
    <string name="remaining_time">残り時間</string>
    <string name="progress_time">経過時間</string>
    <string name="progress_rate">%</string>
    <string name="fifteenth_minutes_passage">15分経過ごとに10$</string>
    <string name="retirement">リタイア</string>
    <string name="get_confirm">現在取得確定</string>
    <string name="get_money">$</string>

    <!-- ショップ画面 -->
    <string name="selected_character">現在のマスコット:</string>
    <string name="home">ホーム</string>
    <string name="character_nothing">なし</string>
    <string name="do_select">選択する</string>
    <string name="selecting">選択中</string>
    <string name="unpurchasable">購入金額が足りないため、購入できません</string>
    <string name="confirm_buy_message">を購入しても良いですか？</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
</resources>
