<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/timer_dialog_base_layout"
    android:orientation="vertical"
    android:background="@color/colorGray"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/remaining_time_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/colorGoldenrod"
        android:paddingTop="@dimen/normal_margin"
        android:paddingBottom="@dimen/normal_margin"
        android:textSize="@dimen/text_normal_size"
        android:text="@string/remaining_time"
        android:textColor="@color/colorWhite"/>

    <TextView
        android:id="@+id/time_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="@dimen/normal_margin"
        android:paddingBottom="@dimen/normal_margin"
        android:text="00:00:00"
        android:textSize="@dimen/text_normal_size"
        android:textColor="@color/colorWhite"/>

    <RelativeLayout
        android:id="@+id/progress_rate_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="@dimen/normal_margin"
        android:paddingBottom="@dimen/normal_margin">

        <!-- 円グラフ -->
        <com.study.ssa.UI.CustomWidget.ChartView
            android:id="@+id/chartView"
            android:layout_width="@dimen/cycle_width"
            android:layout_height="@dimen/cycle_height"
            android:layout_centerInParent="true"/>

        <!-- 進捗率 -->
        <TextView
            android:id="@+id/progress_rate_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/progress_rate"
            android:textSize="@dimen/text_normal_size"
            android:textColor="@color/colorWhite"/>


    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/colorDarkorchid"
        android:paddingTop="@dimen/normal_margin"
        android:paddingBottom="@dimen/normal_margin"
        android:textSize="@dimen/text_normal_size"
        android:text="@string/fifteenth_minutes_passage"
        android:textColor="@color/colorWhite"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/retirement_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@color/colorTeal"
            android:paddingTop="@dimen/normal_margin"
            android:paddingBottom="@dimen/normal_margin"
            android:textSize="@dimen/text_normal_size"
            android:text="@string/retirement"
            android:textColor="@color/colorWhite"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/coloroLivedrab"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:paddingTop="@dimen/normal_margin"
                android:paddingBottom="@dimen/normal_margin"
                android:textSize="@dimen/text_normal_size"
                android:text="@string/get_confirm"
                android:textColor="@color/colorWhite"/>

            <TextView
                android:id="@+id/get_money_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingTop="@dimen/normal_margin"
                android:paddingBottom="@dimen/normal_margin"
                android:textSize="@dimen/text_normal_size"
                android:text="@string/get_money"
                android:textColor="@color/colorWhite"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>